# platform.core.system.deviced

./: CMakeLists.txt  CREDITS  NOTICE  README.api  README.error.code  checkpatch.pl  deviced.pc.in  ss_bs.c  ss_common.c  ss_common.h  ss_core.c  ss_device_change_handler.c  ss_launch.c  ss_lowbat_handler.c  ss_lowmem_handler.c  ss_main.c  ss_pmon_handler.c  ss_predefine.c  ss_procmgr.c  ss_queue.c  ss_sig_handler.c  ss_sysnoti.c  ss_ta_handler.c  ss_timemgr.c  ss_usb_handler.c
devman/: CMakeLists.txt  devman.pc.in
display/: core.c  poll.h  setting.c
haptic/: CMakeLists.txt  haptic-plugin.pc.in  haptic.pc.in
haptic/src/: haptic.c
include/: ss_data.h
libslp-pm/: CMakeLists.txt  pmapi.h
packaging/: deviced.conf  deviced.manifest  deviced.rule  deviced.spec  system-server.spec
restarter/: restart.c
rules/: 99-deviced-sdb-enable.rules
scripts/: deviced-pre.sh  deviced-vibrator.conf  deviced.conf  direct_set_debug.sh  mmc-smack-label
src/: CMakeLists.txt
src/apps/: apps.c  apps.h
src/auto-test/: CMakeLists.txt  main.c  test.c  test.h
src/battery/: battery-time.c  battery.conf  battery.h  config.c  config.h  lowbat-handler.c  power-supply.c  power-supply.h
src/block/: block.c  block.conf  block.h  ext4.c  mmc.c  storage.c  vfat.c
src/bs/: bs.c
src/control/: .control.c.swp  control.c
src/core/: common.c  common.h  config-parser.c  config-parser.h  core.c  core.h  data.h  device-change-handler.c  device-handler.h  device-idler.c  device-idler.h  device-notifier.c  device-notifier.h  devices.c  devices.h  edbus-handler.c  edbus-handler.h  execute.c  launch.c  launch.h  list.h  log.c  log.h  main.c  noti.c  noti.h  power-supply.c  power-supply.h  predefine.c  predefine.h  queue.c  queue.h  sig-handler.c  sig-handler.h  sysnoti.c  sysnoti.h  udev.c  udev.h
src/cpu/: cpu-handler.c
src/devicectl/: CMakeLists.txt  devicectl.c  usb.c  usb.h
src/deviced/: dd-battery.h  dd-common.h  dd-control.h  dd-deviced-managed.h  dd-deviced.h  dd-display.h  dd-haptic.h  dd-led.h  dd-mmc.h  dd-storage.h  dd-usbhost.h  deviced_doc.h  haptic-module.h  haptic-plugin-intf.h
src/display/: auto-brightness.c  backlight-service.c  backlight-service.h  brightness.c  brightness.h  conf.c  conf.h  core.c  core.h  device-interface.c  device-interface.h  display-actor.c  display-actor.h  display-common.conf  display-dbus.c  display-flags.h  display-ivi.conf  display-mobile.conf  display-ops.c  display-ops.h  display-tv.conf  display-wearable.conf  dpms-wayland.c  dpms-x.c  input.c  key-filter.c  llinterface.c  lock-detector.c  lock-detector.h  lsensor.c  poll.c  poll.h  setting.c  setting.h  state-tv.c  util.h  x-lcd-on.c
src/earjack/: earjack.c
src/extcon/: .extcon.h.swp  cradle.c  earjack.c  extcon.c  extcon.h  hdmi.c
src/fsck-msdos/: CMakeLists.txt  boot.c
src/gpio/: buzzer.c  gpio.c  gpio.h  hall.c  sim.c
src/haptic/: CMakeLists.txt  README.standard  edbus-handler.c  edbus-handler.h  emulator.c  external.c  haptic-micro.conf  haptic-mobile.conf  haptic.c  haptic.h  main.c  standard-mix.c  standard.c
src/ir/: ir.c
src/led/: ir.c  led.c  noti.c  torch.c  torch.h  touch-key.c  touch-key.h
src/libdeviced/: CMakeLists.txt  battery.c  control.c  dbus.c  dbus.h  deviced-conf.c  deviced-noti.c  deviced-util.c  display.c  haptic.c  led.c  log-macro.h  log.h  mmc.c  storage.c  usbhost.c
src/libdevman/: CMakeLists.txt
src/libdevman/src/: devman_internal.c  display_wd.c  if_legacy.c
src/libhaptic/: CMakeLists.txt
src/libslp-pm/: CMakeLists.txt
src/libsysman/: CMakeLists.txt  sysconf.c  sysman-util.c  sysnoti.c
src/libsysman/set_pmon/: set_pmon.c
src/mmc/: config.c  config.h  ext4.c  mmc-handler.c  mmc-handler.h  mmc.conf  uevent.c  vfat.c
src/newfs-msdos/: CMakeLists.txt  newfs-msdos.c
src/power/: power-handler.c  power-handler.h
src/predefine_act_plugin/: xxx-predefine.c
src/proc/: cpu-info.c  lowmem-handler.c  pmon-handler.c  pmon-handler.h  proc-handler.c  proc-handler.h
src/restarter/: CMakeLists.txt  restart.c
src/shared/: CMakeLists.txt  battery.c  common.h  dbus.c  dbus.h  deviced-conf.c  deviced-internal.h  deviced-noti.c  deviced-priv.h  deviced-systemd.c  deviced-systemd.h  deviced-util.c  display.c  haptic.c  list.h  log.h  score-defines.h  system-conf.c  system-noti.c  system-util.c
src/storage/: storage.c
src/ta/: ta-handler.c
src/telephony/: telephony.c
src/time/: time-handler.c
src/touchscreen/: touchscreen.c
src/tzip/: tzip-utility.c  tzip-utility.h  tzip.c  tzip.h
src/usb/: usb-base.conf  usb-client.c  usb-config.conf  usb-dbus.c  usb-default.c  usb-emulator.c  usb-handler.c  usb-host.c  usb-operation.c  usb-operation.conf  usb-setting.conf  usb-state.c  usb-tethering.c  usb-tethering.h  usb.c  usb.h
src/usb-host-ffs-test-daemon/: CMakeLists.txt  descs_gen.c  usb-host-ffs-test-daemon.c
src/usb-host-test/: test_gadget.gs  usb-host-test.c
src/usb/configfs/: cfs-gadget-operations.conf  cfs-gadget-setting.conf  cfs-gadget.gs  configfs.c
src/usb/legacy-gadget/: legacy-gadget-operation.conf  legacy-gadget-setting.conf  legacy-gadget.c
src/usb/slp-gadget/: slp-gadget.c
src/usbhost/: 40-usb.rules  usb-host.c
src/vibrator/: vibrator.c  vibrator.h
sys_device_noti/: sys_device_noti.c
sys_pci_noti/: sys_pci_noti.c
sys_pci_noti/po_sys_pci_noti/: CMakeLists.txt
sysman/: CMakeLists.txt
systemd/: devicectl-start@.service  devicectl-stop@.service  deviced-pre.service  deviced-vibrator.service  deviced.service  sdb-prestart.service  usb-host-ffs-test-daemon.service  usb-host-test.socket  zbooting-done.service
udev/: 99-usbhost.rules
udev-rules/: 91-system-server.rules.in
utils/: mmc-smack-label
