CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
PROJECT(deviced-auto-test C)

INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/src)

SET(SRCS
	test.c
	main.c
)

INCLUDE(FindPkgConfig)
pkg_check_modules(pkgs REQUIRED edbus)

FOREACH(flag ${pkgs_CFLAGS})
	SET(EXTRA_CFLAGS "${EXTRA_CFLAGS} ${flag}")
ENDFOREACH(flag)

SET(EXTRA_CFLAGS "${EXTRA_CFLAGS} -g -fno-omit-frame-pointer -finstrument-functions")

SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${EXTRA_CFLAGS}")
MESSAGE("FLAGS: ${CMAKE_C_FLAGS}")

IF("$ENV{CFLAGS}" MATCHES "-DMICRO_DD")
	OPTION(USE_MICRO_DD "Use Micro DD" ON)
ENDIF()

ADD_DEFINITIONS("-DPREFIX=\"${CMAKE_INSTALL_PREFIX}\"")
ADD_DEFINITIONS("-DENABLE_TEST_DLOG")

ADD_EXECUTABLE(${PROJECT_NAME} ${SRCS})
TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${pkgs_LDFLAGS} libdeviced)

INSTALL(TARGETS ${PROJECT_NAME} DESTINATION bin)
