CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
PROJECT(newfs_msdos C)

SET(SRCS
	newfs-msdos.c
	)

INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR})

SET(EXTRA_CFLAGS "${EXTRA_CFLAGS} -g -fno-omit-frame-pointer -finstrument-functions")

SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${EXTRA_CFLAGS}")

ADD_DEFINITIONS("-DPREFIX=\"${CMAKE_INSTALL_PREFIX}\"")
ADD_DEFINITIONS("-DFACTORYFS=\"$ENV{FACTORYFS}\"")
IF( $ENV{ARCH} MATCHES "arm" )
	ADD_DEFINITIONS("-DTARGET")
ENDIF()
ADD_DEFINITIONS("-DDEBUG")
ADD_DEFINITIONS("-DTIZEN")

ADD_EXECUTABLE(${PROJECT_NAME} ${SRCS})

INSTALL(TARGETS ${PROJECT_NAME} DESTINATION bin)
INSTALL(FILES LICENSE.BSD-2-Clause DESTINATION share/license RENAME ${PROJECT_NAME})
